# RWKV-6

./: README.md  main.py  pyproject.toml
src/: config.py  model.py  train.py
